--- a/webview-ui/src/i18n/locales/hi/chat.json
+++ b/webview-ui/src/i18n/locales/hi/chat.json
@@ -26,7 +26,7 @@
 		"shareSuccessOrganization": "संगठन लिंक क्लिपबोर्ड में कॉपी किया गया",
 		"shareSuccessPublic": "सार्वजनिक लिंक क्लिपबोर्ड में कॉपी किया गया",
 		"openInCloud": "ACode Cloud में कार्य खोलें",
-		"openInCloudIntro": "कहीं से भी Roo की निगरानी या इंटरैक्ट करना जारी रखें। खोलने के लिए स्कैन करें, क्लिक करें या कॉपी करें।"
+		"openInCloudIntro": "कहीं से भी ACode की निगरानी या इंटरैक्ट करना जारी रखें। खोलने के लिए स्कैन करें, क्लिक करें या कॉपी करें।"
 	},
 	"unpin": "पिन करें",
 	"pin": "अवपिन करें",
@@ -121,7 +121,7 @@
 		"title": "मोड्स",
 		"marketplace": "मोड मार्केटप्लेस",
 		"settings": "मोड सेटिंग्स",
-		"description": "विशेष व्यक्तित्व जो Roo के व्यवहार को अनुकूलित करते हैं।",
+		"description": "विशेष व्यक्तित्व जो ACode के व्यवहार को अनुकूलित करते हैं।",
 		"searchPlaceholder": "मोड खोजें...",
 		"noResults": "कोई परिणाम नहीं मिला"
 	},
@@ -135,7 +135,7 @@
 	"diffError": {
 		"title": "संपादन असफल"
 	},
-	"troubleMessage": "Roo को समस्या हो रही है...",
+	"troubleMessage": "ACode को समस्या हो रही है...",
 	"apiRequest": {
 		"title": "API अनुरोध",
 		"failed": "API अनुरोध विफल हुआ",
@@ -160,46 +160,46 @@
 		"current": "वर्तमान"
 	},
 	"instructions": {
-		"wantsToFetch": "Roo को वर्तमान कार्य में सहायता के लिए विस्तृत निर्देश प्राप्त करना है"
+		"wantsToFetch": "ACode को वर्तमान कार्य में सहायता के लिए विस्तृत निर्देश प्राप्त करना है"
 	},
 	"fileOperations": {
-		"wantsToRead": "Roo इस फ़ाइल को पढ़ना चाहता है:",
-		"wantsToReadOutsideWorkspace": "Roo कार्यक्षेत्र के बाहर इस फ़ाइल को पढ़ना चाहता है:",
-		"didRead": "Roo ने इस फ़ाइल को पढ़ा:",
-		"wantsToEdit": "Roo इस फ़ाइल को संपादित करना चाहता है:",
-		"wantsToEditOutsideWorkspace": "Roo कार्यक्षेत्र के बाहर इस फ़ाइल को संपादित करना चाहता है:",
-		"wantsToEditProtected": "Roo एक सुरक्षित कॉन्फ़िगरेशन फ़ाइल को संपादित करना चाहता है:",
-		"wantsToCreate": "Roo एक नई फ़ाइल बनाना चाहता है:",
-		"wantsToSearchReplace": "Roo इस फ़ाइल में खोज और प्रतिस्थापन करना चाहता है:",
-		"didSearchReplace": "Roo ने इस फ़ाइल में खोज और प्रतिस्थापन किया:",
-		"wantsToInsert": "Roo इस फ़ाइल में सामग्री डालना चाहता है:",
-		"wantsToInsertWithLineNumber": "Roo इस फ़ाइल की {{lineNumber}} लाइन पर सामग्री डालना चाहता है:",
-		"wantsToInsertAtEnd": "Roo इस फ़ाइल के अंत में सामग्री जोड़ना चाहता है:",
+		"wantsToRead": "ACode इस फ़ाइल को पढ़ना चाहता है:",
+		"wantsToReadOutsideWorkspace": "ACode कार्यक्षेत्र के बाहर इस फ़ाइल को पढ़ना चाहता है:",
+		"didRead": "ACode ने इस फ़ाइल को पढ़ा:",
+		"wantsToEdit": "ACode इस फ़ाइल को संपादित करना चाहता है:",
+		"wantsToEditOutsideWorkspace": "ACode कार्यक्षेत्र के बाहर इस फ़ाइल को संपादित करना चाहता है:",
+		"wantsToEditProtected": "ACode एक सुरक्षित कॉन्फ़िगरेशन फ़ाइल को संपादित करना चाहता है:",
+		"wantsToCreate": "ACode एक नई फ़ाइल बनाना चाहता है:",
+		"wantsToSearchReplace": "ACode इस फ़ाइल में खोज और प्रतिस्थापन करना चाहता है:",
+		"didSearchReplace": "ACode ने इस फ़ाइल में खोज और प्रतिस्थापन किया:",
+		"wantsToInsert": "ACode इस फ़ाइल में सामग्री डालना चाहता है:",
+		"wantsToInsertWithLineNumber": "ACode इस फ़ाइल की {{lineNumber}} लाइन पर सामग्री डालना चाहता है:",
+		"wantsToInsertAtEnd": "ACode इस फ़ाइल के अंत में सामग्री जोड़ना चाहता है:",
 		"wantsToReadAndXMore": "रू इस फ़ाइल को और {{count}} अन्य को पढ़ना चाहता है:",
-		"wantsToReadMultiple": "Roo कई फ़ाइलें पढ़ना चाहता है:",
-		"wantsToApplyBatchChanges": "Roo कई फ़ाइलों में परिवर्तन लागू करना चाहता है:",
-		"wantsToGenerateImage": "Roo एक छवि बनाना चाहता है:",
-		"wantsToGenerateImageOutsideWorkspace": "Roo कार्यक्षेत्र के बाहर एक छवि बनाना चाहता है:",
-		"wantsToGenerateImageProtected": "Roo एक संरक्षित स्थान पर छवि बनाना चाहता है:",
-		"didGenerateImage": "Roo ने एक छवि बनाई:"
+		"wantsToReadMultiple": "ACode कई फ़ाइलें पढ़ना चाहता है:",
+		"wantsToApplyBatchChanges": "ACode कई फ़ाइलों में परिवर्तन लागू करना चाहता है:",
+		"wantsToGenerateImage": "ACode एक छवि बनाना चाहता है:",
+		"wantsToGenerateImageOutsideWorkspace": "ACode कार्यक्षेत्र के बाहर एक छवि बनाना चाहता है:",
+		"wantsToGenerateImageProtected": "ACode एक संरक्षित स्थान पर छवि बनाना चाहता है:",
+		"didGenerateImage": "ACode ने एक छवि बनाई:"
 	},
 	"directoryOperations": {
-		"wantsToViewTopLevel": "Roo इस निर्देशिका में शीर्ष स्तर की फ़ाइलें देखना चाहता है:",
-		"didViewTopLevel": "Roo ने इस निर्देशिका में शीर्ष स्तर की फ़ाइलें देखीं:",
-		"wantsToViewRecursive": "Roo इस निर्देशिका में सभी फ़ाइलों को पुनरावर्ती रूप से देखना चाहता है:",
-		"didViewRecursive": "Roo ने इस निर्देशिका में सभी फ़ाइलों को पुनरावर्ती रूप से देखा:",
-		"wantsToViewDefinitions": "Roo इस निर्देशिका में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखना चाहता है:",
-		"didViewDefinitions": "Roo ने इस निर्देशिका में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखा:",
-		"wantsToSearch": "Roo इस निर्देशिका में <code>{{regex}}</code> के लिए खोज करना चाहता है:",
-		"didSearch": "Roo ने इस निर्देशिका में <code>{{regex}}</code> के लिए खोज की:",
-		"wantsToSearchOutsideWorkspace": "Roo इस निर्देशिका (कार्यक्षेत्र के बाहर) में <code>{{regex}}</code> के लिए खोज करना चाहता है:",
-		"didSearchOutsideWorkspace": "Roo ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में <code>{{regex}}</code> के लिए खोज की:",
-		"wantsToViewTopLevelOutsideWorkspace": "Roo इस निर्देशिका (कार्यक्षेत्र के बाहर) में शीर्ष स्तर की फ़ाइलें देखना चाहता है:",
-		"didViewTopLevelOutsideWorkspace": "Roo ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में शीर्ष स्तर की फ़ाइलें देखीं:",
-		"wantsToViewRecursiveOutsideWorkspace": "Roo इस निर्देशिका (कार्यक्षेत्र के बाहर) में सभी फ़ाइलों को पुनरावर्ती रूप से देखना चाहता है:",
-		"didViewRecursiveOutsideWorkspace": "Roo ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में सभी फ़ाइलों को पुनरावर्ती रूप से देखा:",
-		"wantsToViewDefinitionsOutsideWorkspace": "Roo इस निर्देशिका (कार्यक्षेत्र के बाहर) में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखना चाहता है:",
-		"didViewDefinitionsOutsideWorkspace": "Roo ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखा:"
+		"wantsToViewTopLevel": "ACode इस निर्देशिका में शीर्ष स्तर की फ़ाइलें देखना चाहता है:",
+		"didViewTopLevel": "ACode ने इस निर्देशिका में शीर्ष स्तर की फ़ाइलें देखीं:",
+		"wantsToViewRecursive": "ACode इस निर्देशिका में सभी फ़ाइलों को पुनरावर्ती रूप से देखना चाहता है:",
+		"didViewRecursive": "ACode ने इस निर्देशिका में सभी फ़ाइलों को पुनरावर्ती रूप से देखा:",
+		"wantsToViewDefinitions": "ACode इस निर्देशिका में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखना चाहता है:",
+		"didViewDefinitions": "ACode ने इस निर्देशिका में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखा:",
+		"wantsToSearch": "ACode इस निर्देशिका में <code>{{regex}}</code> के लिए खोज करना चाहता है:",
+		"didSearch": "ACode ने इस निर्देशिका में <code>{{regex}}</code> के लिए खोज की:",
+		"wantsToSearchOutsideWorkspace": "ACode इस निर्देशिका (कार्यक्षेत्र के बाहर) में <code>{{regex}}</code> के लिए खोज करना चाहता है:",
+		"didSearchOutsideWorkspace": "ACode ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में <code>{{regex}}</code> के लिए खोज की:",
+		"wantsToViewTopLevelOutsideWorkspace": "ACode इस निर्देशिका (कार्यक्षेत्र के बाहर) में शीर्ष स्तर की फ़ाइलें देखना चाहता है:",
+		"didViewTopLevelOutsideWorkspace": "ACode ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में शीर्ष स्तर की फ़ाइलें देखीं:",
+		"wantsToViewRecursiveOutsideWorkspace": "ACode इस निर्देशिका (कार्यक्षेत्र के बाहर) में सभी फ़ाइलों को पुनरावर्ती रूप से देखना चाहता है:",
+		"didViewRecursiveOutsideWorkspace": "ACode ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में सभी फ़ाइलों को पुनरावर्ती रूप से देखा:",
+		"wantsToViewDefinitionsOutsideWorkspace": "ACode इस निर्देशिका (कार्यक्षेत्र के बाहर) में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखना चाहता है:",
+		"didViewDefinitionsOutsideWorkspace": "ACode ने इस निर्देशिका (कार्यक्षेत्र के बाहर) में उपयोग किए गए सोर्स कोड परिभाषा नामों को देखा:"
 	},
 	"commandOutput": "कमांड आउटपुट",
 	"commandExecution": {
@@ -221,18 +221,18 @@
 	"response": "प्रतिक्रिया",
 	"arguments": "आर्ग्युमेंट्स",
 	"mcp": {
-		"wantsToUseTool": "Roo {{serverName}} MCP सर्वर पर एक टूल का उपयोग करना चाहता है:",
-		"wantsToAccessResource": "Roo {{serverName}} MCP सर्वर पर एक संसाधन का उपयोग करना चाहता है:"
+		"wantsToUseTool": "ACode {{serverName}} MCP सर्वर पर एक टूल का उपयोग करना चाहता है:",
+		"wantsToAccessResource": "ACode {{serverName}} MCP सर्वर पर एक संसाधन का उपयोग करना चाहता है:"
 	},
 	"modes": {
-		"wantsToSwitch": "Roo <code>{{mode}}</code> मोड में स्विच करना चाहता है",
-		"wantsToSwitchWithReason": "Roo <code>{{mode}}</code> मोड में स्विच करना चाहता है क्योंकि: {{reason}}",
-		"didSwitch": "Roo <code>{{mode}}</code> मोड में स्विच कर गया",
-		"didSwitchWithReason": "Roo <code>{{mode}}</code> मोड में स्विच कर गया क्योंकि: {{reason}}"
+		"wantsToSwitch": "ACode <code>{{mode}}</code> मोड में स्विच करना चाहता है",
+		"wantsToSwitchWithReason": "ACode <code>{{mode}}</code> मोड में स्विच करना चाहता है क्योंकि: {{reason}}",
+		"didSwitch": "ACode <code>{{mode}}</code> मोड में स्विच कर गया",
+		"didSwitchWithReason": "ACode <code>{{mode}}</code> मोड में स्विच कर गया क्योंकि: {{reason}}"
 	},
 	"subtasks": {
-		"wantsToCreate": "Roo <code>{{mode}}</code> मोड में एक नया उपकार्य बनाना चाहता है:",
-		"wantsToFinish": "Roo इस उपकार्य को समाप्त करना चाहता है",
+		"wantsToCreate": "ACode <code>{{mode}}</code> मोड में एक नया उपकार्य बनाना चाहता है:",
+		"wantsToFinish": "ACode इस उपकार्य को समाप्त करना चाहता है",
 		"newTaskContent": "उपकार्य निर्देश",
 		"completionContent": "उपकार्य पूर्ण",
 		"resultContent": "उपकार्य परिणाम",
@@ -240,7 +240,7 @@
 		"completionInstructions": "उपकार्य पूर्ण! आप परिणामों की समीक्षा कर सकते हैं और सुधार या अगले चरण सुझा सकते हैं। यदि सब कुछ ठीक लगता है, तो मुख्य कार्य को परिणाम वापस करने के लिए पुष्टि करें।"
 	},
 	"questions": {
-		"hasQuestion": "Roo का एक प्रश्न है:"
+		"hasQuestion": "ACode का एक प्रश्न है:"
 	},
 	"taskCompleted": "कार्य पूरा हुआ",
 	"powershell": {
@@ -271,15 +271,15 @@
 	},
 	"announcement": {
 		"title": "🎉 ACode {{version}} रिलीज़ हुआ",
-		"description": "<bold>ACode Cloud</bold> का परिचय: Roo की शक्ति को IDE से आगे ले जाना",
+		"description": "<bold>ACode Cloud</bold> का परिचय: ACode की शक्ति को IDE से आगे ले जाना",
 		"feature1": "<bold>कहीं से भी कार्य प्रगति ट्रैक करें (निःशुल्क):</bold> लंबे समय तक चलने वाले कार्यों के लिए रीयल-टाइम अपडेट प्राप्त करें बिना अपने IDE में फंसे",
-		"feature2": "<bold>Roo एक्सटेंशन को दूर से नियंत्रित करें (Pro):</bold> चैट-आधारित ब्राउज़र इंटरफ़ेस से कार्य शुरू करें, रोकें और बातचीत करें।",
+		"feature2": "<bold>ACode एक्सटेंशन को दूर से नियंत्रित करें (Pro):</bold> चैट-आधारित ब्राउज़र इंटरफ़ेस से कार्य शुरू करें, रोकें और बातचीत करें।",
 		"learnMore": "नियंत्रण लेने के लिए तैयार हैं? <learnMoreLink>यहां</learnMoreLink> और जानें।",
 		"visitCloudButton": "ACode Cloud पर जाएं",
 		"socialLinks": "<xLink>X</xLink>, <discordLink>Discord</discordLink>, या <redditLink>r/RooCode</redditLink> पर हमसे जुड़ें"
 	},
 	"browser": {
-		"rooWantsToUse": "Roo ब्राउज़र का उपयोग करना चाहता है:",
+		"rooWantsToUse": "ACode ब्राउज़र का उपयोग करना चाहता है:",
 		"consoleLogs": "कंसोल लॉग",
 		"noNewLogs": "(कोई नया लॉग नहीं)",
 		"screenshot": "ब्राउज़र स्क्रीनशॉट",
@@ -319,18 +319,18 @@
 	"ask": {
 		"autoApprovedRequestLimitReached": {
 			"title": "स्वत:-स्वीकृत अनुरोध सीमा पहुंची",
-			"description": "Roo {{count}} API अनुरोध(धों) की स्वत:-स्वीकृत सीमा तक पहुंच गया है। क्या आप गणना को रीसेट करके कार्य जारी रखना चाहते हैं?",
+			"description": "ACode {{count}} API अनुरोध(धों) की स्वत:-स्वीकृत सीमा तक पहुंच गया है। क्या आप गणना को रीसेट करके कार्य जारी रखना चाहते हैं?",
 			"button": "रीसेट करें और जारी रखें"
 		},
 		"autoApprovedCostLimitReached": {
 			"title": "स्वत:-अनुमोदित लागत सीमा पहुँच गई",
 			"button": "रीसेट करें और जारी रखें",
-			"description": "Roo ने स्वचालित-स्वीकृत लागत सीमा ${{count}} तक पहुंच गई है। क्या आप लागत को रीसेट करके कार्य जारी रखना चाहेंगे?"
+			"description": "ACode ने स्वचालित-स्वीकृत लागत सीमा ${{count}} तक पहुंच गई है। क्या आप लागत को रीसेट करके कार्य जारी रखना चाहेंगे?"
 		}
 	},
 	"codebaseSearch": {
-		"wantsToSearch": "Roo कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
-		"wantsToSearchWithPath": "Roo <code>{{path}}</code> में कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
+		"wantsToSearch": "ACode कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
+		"wantsToSearchWithPath": "ACode <code>{{path}}</code> में कोडबेस में <code>{{query}}</code> खोजना चाहता है:",
 		"didSearch_one": "1 परिणाम मिला",
 		"didSearch_other": "{{count}} परिणाम मिले",
 		"resultTooltip": "समानता स्कोर: {{score}} (फ़ाइल खोलने के लिए क्लिक करें)"
@@ -388,7 +388,7 @@
 		"clickToEdit": "संदेश संपादित करने के लिए क्लिक करें"
 	},
 	"slashCommand": {
-		"wantsToRun": "Roo एक स्लैश कमांड चलाना चाहता है:",
-		"didRun": "Roo ने एक स्लैश कमांड चलाया:"
+		"wantsToRun": "ACode एक स्लैश कमांड चलाना चाहता है:",
+		"didRun": "ACode ने एक स्लैश कमांड चलाया:"
 	}
 }
