--- a/webview-ui/src/i18n/locales/nl/chat.json
+++ b/webview-ui/src/i18n/locales/nl/chat.json
@@ -26,7 +26,7 @@
 		"shareSuccessOrganization": "Organisatielink gekopieerd naar klembord",
 		"shareSuccessPublic": "Openbare link gekopieerd naar klembord",
 		"openInCloud": "Taak openen in ACode Cloud",
-		"openInCloudIntro": "Blijf Roo vanaf elke locatie monitoren of ermee interacteren. Scan, klik of kopieer om te openen."
+		"openInCloudIntro": "Blijf ACode vanaf elke locatie monitoren of ermee interacteren. Scan, klik of kopieer om te openen."
 	},
 	"unpin": "Losmaken",
 	"pin": "Vastmaken",
@@ -113,7 +113,7 @@
 		"title": "Modi",
 		"marketplace": "Modus Marktplaats",
 		"settings": "Modus Instellingen",
-		"description": "Gespecialiseerde persona's die het gedrag van Roo aanpassen.",
+		"description": "Gespecialiseerde persona's die het gedrag van ACode aanpassen.",
 		"searchPlaceholder": "Zoek modi...",
 		"noResults": "Geen resultaten gevonden"
 	},
@@ -155,46 +155,46 @@
 		"current": "Huidig"
 	},
 	"instructions": {
-		"wantsToFetch": "Roo wil gedetailleerde instructies ophalen om te helpen met de huidige taak"
+		"wantsToFetch": "ACode wil gedetailleerde instructies ophalen om te helpen met de huidige taak"
 	},
 	"fileOperations": {
-		"wantsToRead": "Roo wil dit bestand lezen:",
-		"wantsToReadOutsideWorkspace": "Roo wil dit bestand buiten de werkruimte lezen:",
-		"didRead": "Roo heeft dit bestand gelezen:",
-		"wantsToEdit": "Roo wil dit bestand bewerken:",
-		"wantsToEditOutsideWorkspace": "Roo wil dit bestand buiten de werkruimte bewerken:",
-		"wantsToEditProtected": "Roo wil een beveiligd configuratiebestand bewerken:",
-		"wantsToCreate": "Roo wil een nieuw bestand aanmaken:",
-		"wantsToSearchReplace": "Roo wil zoeken en vervangen in dit bestand:",
-		"didSearchReplace": "Roo heeft zoeken en vervangen uitgevoerd op dit bestand:",
-		"wantsToInsert": "Roo wil inhoud invoegen in dit bestand:",
-		"wantsToInsertWithLineNumber": "Roo wil inhoud invoegen in dit bestand op regel {{lineNumber}}:",
-		"wantsToInsertAtEnd": "Roo wil inhoud toevoegen aan het einde van dit bestand:",
-		"wantsToReadAndXMore": "Roo wil dit bestand en nog {{count}} andere lezen:",
-		"wantsToReadMultiple": "Roo wil meerdere bestanden lezen:",
-		"wantsToApplyBatchChanges": "Roo wil wijzigingen toepassen op meerdere bestanden:",
-		"wantsToGenerateImage": "Roo wil een afbeelding genereren:",
-		"wantsToGenerateImageOutsideWorkspace": "Roo wil een afbeelding genereren buiten de werkruimte:",
-		"wantsToGenerateImageProtected": "Roo wil een afbeelding genereren op een beschermde locatie:",
-		"didGenerateImage": "Roo heeft een afbeelding gegenereerd:"
+		"wantsToRead": "ACode wil dit bestand lezen:",
+		"wantsToReadOutsideWorkspace": "ACode wil dit bestand buiten de werkruimte lezen:",
+		"didRead": "ACode heeft dit bestand gelezen:",
+		"wantsToEdit": "ACode wil dit bestand bewerken:",
+		"wantsToEditOutsideWorkspace": "ACode wil dit bestand buiten de werkruimte bewerken:",
+		"wantsToEditProtected": "ACode wil een beveiligd configuratiebestand bewerken:",
+		"wantsToCreate": "ACode wil een nieuw bestand aanmaken:",
+		"wantsToSearchReplace": "ACode wil zoeken en vervangen in dit bestand:",
+		"didSearchReplace": "ACode heeft zoeken en vervangen uitgevoerd op dit bestand:",
+		"wantsToInsert": "ACode wil inhoud invoegen in dit bestand:",
+		"wantsToInsertWithLineNumber": "ACode wil inhoud invoegen in dit bestand op regel {{lineNumber}}:",
+		"wantsToInsertAtEnd": "ACode wil inhoud toevoegen aan het einde van dit bestand:",
+		"wantsToReadAndXMore": "ACode wil dit bestand en nog {{count}} andere lezen:",
+		"wantsToReadMultiple": "ACode wil meerdere bestanden lezen:",
+		"wantsToApplyBatchChanges": "ACode wil wijzigingen toepassen op meerdere bestanden:",
+		"wantsToGenerateImage": "ACode wil een afbeelding genereren:",
+		"wantsToGenerateImageOutsideWorkspace": "ACode wil een afbeelding genereren buiten de werkruimte:",
+		"wantsToGenerateImageProtected": "ACode wil een afbeelding genereren op een beschermde locatie:",
+		"didGenerateImage": "ACode heeft een afbeelding gegenereerd:"
 	},
 	"directoryOperations": {
-		"wantsToViewTopLevel": "Roo wil de bovenliggende bestanden in deze map bekijken:",
-		"didViewTopLevel": "Roo heeft de bovenliggende bestanden in deze map bekeken:",
-		"wantsToViewRecursive": "Roo wil alle bestanden in deze map recursief bekijken:",
-		"didViewRecursive": "Roo heeft alle bestanden in deze map recursief bekeken:",
-		"wantsToViewDefinitions": "Roo wil broncode-definitienamen bekijken die in deze map worden gebruikt:",
-		"didViewDefinitions": "Roo heeft broncode-definitienamen bekeken die in deze map worden gebruikt:",
-		"wantsToSearch": "Roo wil deze map doorzoeken op <code>{{regex}}</code>:",
-		"didSearch": "Roo heeft deze map doorzocht op <code>{{regex}}</code>:",
-		"wantsToSearchOutsideWorkspace": "Roo wil deze map (buiten werkruimte) doorzoeken op <code>{{regex}}</code>:",
-		"didSearchOutsideWorkspace": "Roo heeft deze map (buiten werkruimte) doorzocht op <code>{{regex}}</code>:",
-		"wantsToViewTopLevelOutsideWorkspace": "Roo wil de bovenliggende bestanden in deze map (buiten werkruimte) bekijken:",
-		"didViewTopLevelOutsideWorkspace": "Roo heeft de bovenliggende bestanden in deze map (buiten werkruimte) bekeken:",
-		"wantsToViewRecursiveOutsideWorkspace": "Roo wil alle bestanden in deze map (buiten werkruimte) recursief bekijken:",
-		"didViewRecursiveOutsideWorkspace": "Roo heeft alle bestanden in deze map (buiten werkruimte) recursief bekeken:",
-		"wantsToViewDefinitionsOutsideWorkspace": "Roo wil broncode-definitienamen bekijken die in deze map (buiten werkruimte) worden gebruikt:",
-		"didViewDefinitionsOutsideWorkspace": "Roo heeft broncode-definitienamen bekeken die in deze map (buiten werkruimte) worden gebruikt:"
+		"wantsToViewTopLevel": "ACode wil de bovenliggende bestanden in deze map bekijken:",
+		"didViewTopLevel": "ACode heeft de bovenliggende bestanden in deze map bekeken:",
+		"wantsToViewRecursive": "ACode wil alle bestanden in deze map recursief bekijken:",
+		"didViewRecursive": "ACode heeft alle bestanden in deze map recursief bekeken:",
+		"wantsToViewDefinitions": "ACode wil broncode-definitienamen bekijken die in deze map worden gebruikt:",
+		"didViewDefinitions": "ACode heeft broncode-definitienamen bekeken die in deze map worden gebruikt:",
+		"wantsToSearch": "ACode wil deze map doorzoeken op <code>{{regex}}</code>:",
+		"didSearch": "ACode heeft deze map doorzocht op <code>{{regex}}</code>:",
+		"wantsToSearchOutsideWorkspace": "ACode wil deze map (buiten werkruimte) doorzoeken op <code>{{regex}}</code>:",
+		"didSearchOutsideWorkspace": "ACode heeft deze map (buiten werkruimte) doorzocht op <code>{{regex}}</code>:",
+		"wantsToViewTopLevelOutsideWorkspace": "ACode wil de bovenliggende bestanden in deze map (buiten werkruimte) bekijken:",
+		"didViewTopLevelOutsideWorkspace": "ACode heeft de bovenliggende bestanden in deze map (buiten werkruimte) bekeken:",
+		"wantsToViewRecursiveOutsideWorkspace": "ACode wil alle bestanden in deze map (buiten werkruimte) recursief bekijken:",
+		"didViewRecursiveOutsideWorkspace": "ACode heeft alle bestanden in deze map (buiten werkruimte) recursief bekeken:",
+		"wantsToViewDefinitionsOutsideWorkspace": "ACode wil broncode-definitienamen bekijken die in deze map (buiten werkruimte) worden gebruikt:",
+		"didViewDefinitionsOutsideWorkspace": "ACode heeft broncode-definitienamen bekeken die in deze map (buiten werkruimte) worden gebruikt:"
 	},
 	"commandOutput": "Commando-uitvoer",
 	"commandExecution": {
@@ -216,18 +216,18 @@
 	"response": "Antwoord",
 	"arguments": "Argumenten",
 	"mcp": {
-		"wantsToUseTool": "Roo wil een tool gebruiken op de {{serverName}} MCP-server:",
-		"wantsToAccessResource": "Roo wil een bron benaderen op de {{serverName}} MCP-server:"
+		"wantsToUseTool": "ACode wil een tool gebruiken op de {{serverName}} MCP-server:",
+		"wantsToAccessResource": "ACode wil een bron benaderen op de {{serverName}} MCP-server:"
 	},
 	"modes": {
-		"wantsToSwitch": "Roo wil overschakelen naar {{mode}} modus",
-		"wantsToSwitchWithReason": "Roo wil overschakelen naar {{mode}} modus omdat: {{reason}}",
-		"didSwitch": "Roo is overgeschakeld naar {{mode}} modus",
-		"didSwitchWithReason": "Roo is overgeschakeld naar {{mode}} modus omdat: {{reason}}"
+		"wantsToSwitch": "ACode wil overschakelen naar {{mode}} modus",
+		"wantsToSwitchWithReason": "ACode wil overschakelen naar {{mode}} modus omdat: {{reason}}",
+		"didSwitch": "ACode is overgeschakeld naar {{mode}} modus",
+		"didSwitchWithReason": "ACode is overgeschakeld naar {{mode}} modus omdat: {{reason}}"
 	},
 	"subtasks": {
-		"wantsToCreate": "Roo wil een nieuwe subtaak aanmaken in {{mode}} modus:",
-		"wantsToFinish": "Roo wil deze subtaak voltooien",
+		"wantsToCreate": "ACode wil een nieuwe subtaak aanmaken in {{mode}} modus:",
+		"wantsToFinish": "ACode wil deze subtaak voltooien",
 		"newTaskContent": "Subtaak-instructies",
 		"completionContent": "Subtaak voltooid",
 		"resultContent": "Subtaakresultaten",
@@ -235,14 +235,14 @@
 		"completionInstructions": "Subtaak voltooid! Je kunt de resultaten bekijken en eventuele correcties of volgende stappen voorstellen. Als alles goed is, bevestig dan om het resultaat terug te sturen naar de hoofdtaak."
 	},
 	"questions": {
-		"hasQuestion": "Roo heeft een vraag:"
+		"hasQuestion": "ACode heeft een vraag:"
 	},
 	"taskCompleted": "Taak voltooid",
 	"error": "Fout",
 	"diffError": {
 		"title": "Bewerking mislukt"
 	},
-	"troubleMessage": "Roo ondervindt problemen...",
+	"troubleMessage": "ACode ondervindt problemen...",
 	"powershell": {
 		"issues": "Het lijkt erop dat je problemen hebt met Windows PowerShell, zie deze"
 	},
@@ -256,9 +256,9 @@
 	},
 	"announcement": {
 		"title": "🎉 ACode {{version}} uitgebracht",
-		"description": "Introductie van <bold>ACode Cloud:</bold> De kracht van Roo brengen voorbij de IDE",
+		"description": "Introductie van <bold>ACode Cloud:</bold> De kracht van ACode brengen voorbij de IDE",
 		"feature1": "<bold>Volg taakvoortgang overal (Gratis):</bold> Krijg realtime updates van langlopende taken zonder vast te zitten in je IDE",
-		"feature2": "<bold>Bestuur de Roo Extensie op afstand (Pro):</bold> Start, stop en interacteer met taken vanuit een chat-gebaseerde browserinterface.",
+		"feature2": "<bold>Bestuur de ACode Extensie op afstand (Pro):</bold> Start, stop en interacteer met taken vanuit een chat-gebaseerde browserinterface.",
 		"learnMore": "Klaar om de controle te nemen? Leer meer <learnMoreLink>hier</learnMoreLink>.",
 		"visitCloudButton": "Bezoek ACode Cloud",
 		"socialLinks": "Sluit je bij ons aan op <xLink>X</xLink>, <discordLink>Discord</discordLink>, of <redditLink>r/RooCode</redditLink>"
@@ -279,7 +279,7 @@
 		"countdownDisplay": "{{count}}s"
 	},
 	"browser": {
-		"rooWantsToUse": "Roo wil de browser gebruiken:",
+		"rooWantsToUse": "ACode wil de browser gebruiken:",
 		"consoleLogs": "Console-logboeken",
 		"noNewLogs": "(Geen nieuwe logboeken)",
 		"screenshot": "Browserschermopname",
@@ -319,18 +319,18 @@
 	"ask": {
 		"autoApprovedRequestLimitReached": {
 			"title": "Limiet voor automatisch goedgekeurde verzoeken bereikt",
-			"description": "Roo heeft de automatisch goedgekeurde limiet van {{count}} API-verzoek(en) bereikt. Wil je de teller resetten en doorgaan met de taak?",
+			"description": "ACode heeft de automatisch goedgekeurde limiet van {{count}} API-verzoek(en) bereikt. Wil je de teller resetten en doorgaan met de taak?",
 			"button": "Resetten en doorgaan"
 		},
 		"autoApprovedCostLimitReached": {
 			"title": "Limiet voor automatisch goedgekeurde kosten bereikt",
 			"button": "Resetten en doorgaan",
-			"description": "Roo heeft de automatisch goedgekeurde kostenlimiet van ${{count}} bereikt. Wilt u de kosten resetten en doorgaan met de taak?"
+			"description": "ACode heeft de automatisch goedgekeurde kostenlimiet van ${{count}} bereikt. Wilt u de kosten resetten en doorgaan met de taak?"
 		}
 	},
 	"codebaseSearch": {
-		"wantsToSearch": "Roo wil de codebase doorzoeken op <code>{{query}}</code>:",
-		"wantsToSearchWithPath": "Roo wil de codebase doorzoeken op <code>{{query}}</code> in <code>{{path}}</code>:",
+		"wantsToSearch": "ACode wil de codebase doorzoeken op <code>{{query}}</code>:",
+		"wantsToSearchWithPath": "ACode wil de codebase doorzoeken op <code>{{query}}</code> in <code>{{path}}</code>:",
 		"didSearch_one": "1 resultaat gevonden",
 		"didSearch_other": "{{count}} resultaten gevonden",
 		"resultTooltip": "Gelijkenisscore: {{score}} (klik om bestand te openen)"
@@ -388,7 +388,7 @@
 		"clickToEdit": "Klik om bericht te bewerken"
 	},
 	"slashCommand": {
-		"wantsToRun": "Roo wil een slash commando uitvoeren:",
-		"didRun": "Roo heeft een slash commando uitgevoerd:"
+		"wantsToRun": "ACode wil een slash commando uitvoeren:",
+		"didRun": "ACode heeft een slash commando uitgevoerd:"
 	}
 }
