--- a/webview-ui/src/i18n/locales/zh-TW/chat.json
+++ b/webview-ui/src/i18n/locales/zh-TW/chat.json
@@ -26,7 +26,7 @@
 		"shareSuccessOrganization": "組織連結已複製到剪貼簿",
 		"shareSuccessPublic": "公開連結已複製到剪貼簿",
 		"openInCloud": "在 ACode Cloud 中開啟工作",
-		"openInCloudIntro": "從任何地方繼續監控或與 Roo 互動。掃描、點擊或複製以開啟。"
+		"openInCloudIntro": "從任何地方繼續監控或與 ACode 互動。掃描、點擊或複製以開啟。"
 	},
 	"unpin": "取消釘選",
 	"pin": "釘選",
@@ -123,7 +123,7 @@
 		"title": "模式",
 		"marketplace": "模式市集",
 		"settings": "模式設定",
-		"description": "專門量身打造 Roo 行為的角色。",
+		"description": "專門量身打造 ACode 行為的角色。",
 		"searchPlaceholder": "搜尋模式...",
 		"noResults": "沒有找到結果"
 	},
@@ -172,50 +172,50 @@
 		"tokens": "Token"
 	},
 	"instructions": {
-		"wantsToFetch": "Roo 想要取得詳細指示以協助目前工作"
+		"wantsToFetch": "ACode 想要取得詳細指示以協助目前工作"
 	},
 	"fileOperations": {
-		"wantsToRead": "Roo 想要讀取此檔案：",
-		"wantsToReadMultiple": "Roo 想要讀取多個檔案：",
-		"wantsToReadAndXMore": "Roo 想要讀取此檔案以及另外 {{count}} 個檔案：",
-		"wantsToReadOutsideWorkspace": "Roo 想要讀取此工作區外的檔案：",
-		"didRead": "Roo 已讀取此檔案：",
-		"wantsToEdit": "Roo 想要編輯此檔案：",
-		"wantsToEditOutsideWorkspace": "Roo 想要編輯此工作區外的檔案：",
-		"wantsToEditProtected": "Roo 想要編輯受保護的設定檔案：",
-		"wantsToApplyBatchChanges": "Roo 想要對多個檔案套用變更：",
-		"wantsToGenerateImage": "Roo 想要產生圖片：",
-		"wantsToGenerateImageOutsideWorkspace": "Roo 想要在工作區外產生圖片：",
-		"wantsToGenerateImageProtected": "Roo 想要在受保護位置產生圖片：",
-		"didGenerateImage": "Roo 已產生圖片：",
-		"wantsToCreate": "Roo 想要建立新檔案：",
-		"wantsToSearchReplace": "Roo 想要在此檔案中搜尋和取代：",
-		"didSearchReplace": "Roo 已在此檔案執行搜尋和取代：",
-		"wantsToInsert": "Roo 想要在此檔案中插入內容：",
-		"wantsToInsertWithLineNumber": "Roo 想要在此檔案第 {{lineNumber}} 行插入內容：",
-		"wantsToInsertAtEnd": "Roo 想要在此檔案尾端新增內容："
+		"wantsToRead": "ACode 想要讀取此檔案：",
+		"wantsToReadMultiple": "ACode 想要讀取多個檔案：",
+		"wantsToReadAndXMore": "ACode 想要讀取此檔案以及另外 {{count}} 個檔案：",
+		"wantsToReadOutsideWorkspace": "ACode 想要讀取此工作區外的檔案：",
+		"didRead": "ACode 已讀取此檔案：",
+		"wantsToEdit": "ACode 想要編輯此檔案：",
+		"wantsToEditOutsideWorkspace": "ACode 想要編輯此工作區外的檔案：",
+		"wantsToEditProtected": "ACode 想要編輯受保護的設定檔案：",
+		"wantsToApplyBatchChanges": "ACode 想要對多個檔案套用變更：",
+		"wantsToGenerateImage": "ACode 想要產生圖片：",
+		"wantsToGenerateImageOutsideWorkspace": "ACode 想要在工作區外產生圖片：",
+		"wantsToGenerateImageProtected": "ACode 想要在受保護位置產生圖片：",
+		"didGenerateImage": "ACode 已產生圖片：",
+		"wantsToCreate": "ACode 想要建立新檔案：",
+		"wantsToSearchReplace": "ACode 想要在此檔案中搜尋和取代：",
+		"didSearchReplace": "ACode 已在此檔案執行搜尋和取代：",
+		"wantsToInsert": "ACode 想要在此檔案中插入內容：",
+		"wantsToInsertWithLineNumber": "ACode 想要在此檔案第 {{lineNumber}} 行插入內容：",
+		"wantsToInsertAtEnd": "ACode 想要在此檔案尾端新增內容："
 	},
 	"directoryOperations": {
-		"wantsToViewTopLevel": "Roo 想要檢視此目錄中最上層的檔案：",
-		"didViewTopLevel": "Roo 已檢視此目錄中最上層的檔案：",
-		"wantsToViewTopLevelOutsideWorkspace": "Roo 想要檢視此目錄（工作區外）中最上層的檔案：",
-		"didViewTopLevelOutsideWorkspace": "Roo 已檢視此目錄（工作區外）中最上層的檔案：",
-		"wantsToViewRecursive": "Roo 想要遞迴檢視此目錄中的所有檔案：",
-		"didViewRecursive": "Roo 已遞迴檢視此目錄中的所有檔案：",
-		"wantsToViewRecursiveOutsideWorkspace": "Roo 想要遞迴檢視此目錄（工作區外）中的所有檔案：",
-		"didViewRecursiveOutsideWorkspace": "Roo 已遞迴檢視此目錄（工作區外）中的所有檔案：",
-		"wantsToViewDefinitions": "Roo 想要檢視此目錄中使用的原始碼定義名稱：",
-		"didViewDefinitions": "Roo 已檢視此目錄中使用的原始碼定義名稱：",
-		"wantsToViewDefinitionsOutsideWorkspace": "Roo 想要檢視此目錄（工作區外）中使用的原始碼定義名稱：",
-		"didViewDefinitionsOutsideWorkspace": "Roo 已檢視此目錄（工作區外）中使用的原始碼定義名稱：",
-		"wantsToSearch": "Roo 想要在此目錄中搜尋 <code>{{regex}}</code>：",
-		"didSearch": "Roo 已在此目錄中搜尋 <code>{{regex}}</code>：",
-		"wantsToSearchOutsideWorkspace": "Roo 想要在此目錄（工作區外）中搜尋 <code>{{regex}}</code>：",
-		"didSearchOutsideWorkspace": "Roo 已在此目錄（工作區外）中搜尋 <code>{{regex}}</code>："
+		"wantsToViewTopLevel": "ACode 想要檢視此目錄中最上層的檔案：",
+		"didViewTopLevel": "ACode 已檢視此目錄中最上層的檔案：",
+		"wantsToViewTopLevelOutsideWorkspace": "ACode 想要檢視此目錄（工作區外）中最上層的檔案：",
+		"didViewTopLevelOutsideWorkspace": "ACode 已檢視此目錄（工作區外）中最上層的檔案：",
+		"wantsToViewRecursive": "ACode 想要遞迴檢視此目錄中的所有檔案：",
+		"didViewRecursive": "ACode 已遞迴檢視此目錄中的所有檔案：",
+		"wantsToViewRecursiveOutsideWorkspace": "ACode 想要遞迴檢視此目錄（工作區外）中的所有檔案：",
+		"didViewRecursiveOutsideWorkspace": "ACode 已遞迴檢視此目錄（工作區外）中的所有檔案：",
+		"wantsToViewDefinitions": "ACode 想要檢視此目錄中使用的原始碼定義名稱：",
+		"didViewDefinitions": "ACode 已檢視此目錄中使用的原始碼定義名稱：",
+		"wantsToViewDefinitionsOutsideWorkspace": "ACode 想要檢視此目錄（工作區外）中使用的原始碼定義名稱：",
+		"didViewDefinitionsOutsideWorkspace": "ACode 已檢視此目錄（工作區外）中使用的原始碼定義名稱：",
+		"wantsToSearch": "ACode 想要在此目錄中搜尋 <code>{{regex}}</code>：",
+		"didSearch": "ACode 已在此目錄中搜尋 <code>{{regex}}</code>：",
+		"wantsToSearchOutsideWorkspace": "ACode 想要在此目錄（工作區外）中搜尋 <code>{{regex}}</code>：",
+		"didSearchOutsideWorkspace": "ACode 已在此目錄（工作區外）中搜尋 <code>{{regex}}</code>："
 	},
 	"codebaseSearch": {
-		"wantsToSearch": "Roo 想要在程式碼庫中搜尋：<code>{{query}}</code>",
-		"wantsToSearchWithPath": "Roo 想要在 <code>{{path}}</code> 中搜尋程式碼庫：<code>{{query}}</code>",
+		"wantsToSearch": "ACode 想要在程式碼庫中搜尋：<code>{{query}}</code>",
+		"wantsToSearchWithPath": "ACode 想要在 <code>{{path}}</code> 中搜尋程式碼庫：<code>{{query}}</code>",
 		"didSearch_one": "找到 1 個結果",
 		"didSearch_other": "找到 {{count}} 個結果",
 		"resultTooltip": "相似度評分：{{score}} (點選開啟檔案)"
@@ -240,18 +240,18 @@
 	"response": "回應",
 	"arguments": "參數",
 	"mcp": {
-		"wantsToUseTool": "Roo 想要在 {{serverName}} MCP 伺服器上使用工具：",
-		"wantsToAccessResource": "Roo 想要存取 {{serverName}} MCP 伺服器上的資源："
+		"wantsToUseTool": "ACode 想要在 {{serverName}} MCP 伺服器上使用工具：",
+		"wantsToAccessResource": "ACode 想要存取 {{serverName}} MCP 伺服器上的資源："
 	},
 	"modes": {
-		"wantsToSwitch": "Roo 想要切換至 {{mode}} 模式",
-		"wantsToSwitchWithReason": "Roo 想要切換至 {{mode}} 模式，原因：{{reason}}",
-		"didSwitch": "Roo 已切換至 {{mode}} 模式",
-		"didSwitchWithReason": "Roo 已切換至 {{mode}} 模式，原因：{{reason}}"
+		"wantsToSwitch": "ACode 想要切換至 {{mode}} 模式",
+		"wantsToSwitchWithReason": "ACode 想要切換至 {{mode}} 模式，原因：{{reason}}",
+		"didSwitch": "ACode 已切換至 {{mode}} 模式",
+		"didSwitchWithReason": "ACode 已切換至 {{mode}} 模式，原因：{{reason}}"
 	},
 	"subtasks": {
-		"wantsToCreate": "Roo 想要在 {{mode}} 模式下建立新的子工作：",
-		"wantsToFinish": "Roo 想要完成此子工作",
+		"wantsToCreate": "ACode 想要在 {{mode}} 模式下建立新的子工作：",
+		"wantsToFinish": "ACode 想要完成此子工作",
 		"newTaskContent": "子工作指示",
 		"completionContent": "子工作已完成",
 		"resultContent": "子工作結果",
@@ -259,14 +259,14 @@
 		"completionInstructions": "子工作已完成！您可以檢閱結果並提出修正或後續步驟。如果一切順利，請確認以將結果回傳給主任務。"
 	},
 	"questions": {
-		"hasQuestion": "Roo 有一個問題："
+		"hasQuestion": "ACode 有一個問題："
 	},
 	"taskCompleted": "工作完成",
 	"error": "錯誤",
 	"diffError": {
 		"title": "編輯失敗"
 	},
-	"troubleMessage": "Roo 遇到問題...",
+	"troubleMessage": "ACode 遇到問題...",
 	"powershell": {
 		"issues": "您似乎遇到了 Windows PowerShell 的問題，請參閱此說明文件"
 	},
@@ -280,9 +280,9 @@
 	},
 	"announcement": {
 		"title": "🎉 ACode {{version}} 已發布",
-		"description": "介紹 <bold>ACode Cloud：</bold>將 Roo 的強大功能延伸到 IDE 之外",
+		"description": "介紹 <bold>ACode Cloud：</bold>將 ACode 的強大功能延伸到 IDE 之外",
 		"feature1": "<bold>隨時隨地追蹤任務進度（免費）：</bold>取得長時間執行任務的即時更新，無需被困在 IDE 中",
-		"feature2": "<bold>遠端控制 Roo 擴充功能（Pro）：</bold>透過基於聊天的瀏覽器介面啟動、停止並與任務互動。",
+		"feature2": "<bold>遠端控制 ACode 擴充功能（Pro）：</bold>透過基於聊天的瀏覽器介面啟動、停止並與任務互動。",
 		"learnMore": "準備好掌控一切了嗎？在<learnMoreLink>這裡</learnMoreLink>了解更多。",
 		"visitCloudButton": "造訪 ACode Cloud",
 		"socialLinks": "在 <xLink>X</xLink>、<discordLink>Discord</discordLink> 或 <redditLink>r/RooCode</redditLink> 上關注我們"
@@ -297,7 +297,7 @@
 		"countdownDisplay": "{{count}} 秒"
 	},
 	"browser": {
-		"rooWantsToUse": "Roo 想要使用瀏覽器：",
+		"rooWantsToUse": "ACode 想要使用瀏覽器：",
 		"consoleLogs": "主控台記錄",
 		"noNewLogs": "（沒有新記錄）",
 		"screenshot": "瀏覽器螢幕擷圖",
@@ -337,12 +337,12 @@
 	"ask": {
 		"autoApprovedRequestLimitReached": {
 			"title": "已達自動核准請求上限",
-			"description": "Roo 已達到 {{count}} 次 API 請求的自動核准上限。您想重設計數並繼續工作嗎？",
+			"description": "ACode 已達到 {{count}} 次 API 請求的自動核准上限。您想重設計數並繼續工作嗎？",
 			"button": "重設並繼續"
 		},
 		"autoApprovedCostLimitReached": {
 			"title": "已達自動核准費用上限",
-			"description": "Roo 已達到 ${{count}} 的自動核准費用上限。您想重設費用並繼續工作嗎？",
+			"description": "ACode 已達到 ${{count}} 的自動核准費用上限。您想重設費用並繼續工作嗎？",
 			"button": "重設並繼續"
 		}
 	},
@@ -388,7 +388,7 @@
 		"clickToEdit": "點選以編輯訊息"
 	},
 	"slashCommand": {
-		"wantsToRun": "Roo 想要執行斜線指令:",
-		"didRun": "Roo 執行了斜線指令:"
+		"wantsToRun": "ACode 想要執行斜線指令:",
+		"didRun": "ACode 執行了斜線指令:"
 	}
 }
